Fix main nav padding on mobile

--- a/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/frontend_bootstrap.css.scss
@@ -23,14 +23,6 @@
     }
   }
 
-  @media (max-width: 767px) {
-    .navbar-nav > li > a {
-      padding-top: 0;
-      padding-bottom: 10px;
-      line-height: $line-height-base;
-    }
-  }
-
   .navbar {
     padding: 0;
   }
